первые 3 секции на тест

--- a/style.scss
+++ b/style.scss
@@ -229,7 +229,7 @@ $orange_head:#f9b43b;
 }
 .reviews{
     height: 100vh;
-    background:grey;
+    background:lightgrey;
     .reviews__list{
         display: flex;
         flex-wrap: wrap;
