--- a/style.scss
+++ b/style.scss
@@ -229,7 +229,7 @@ $orange_head:#f9b43b;
 }
 .reviews{
     height: 100vh;
-    background:lightgrey;
+    background:rgb(219, 202, 202);
     .reviews__list{
         display: flex;
         flex-wrap: wrap;
