заново залил бэкгроунд секции ЛУЧШИЕ

--- a/style.scss
+++ b/style.scss
@@ -277,7 +277,7 @@ $orange_head:#f9b43b;
 }
 
 .we-best{
-    background:url('we-best-background.png') center center no-repeat;
+    background:url('best-background.png') center center no-repeat;
     background-size: cover;
     width:100%;
     height: 100vh;
