--- a/style.css
+++ b/style.css
@@ -153,7 +153,7 @@
   left: 50%; }
 
 .we-best {
-  background: url("we-best-background.png") center center no-repeat;
+  background: url("best-background.png") center center no-repeat;
   background-size: cover;
   width: 100%;
   height: 100vh;
