--- a/style.scss
+++ b/style.scss
@@ -14,13 +14,13 @@ $orange_head:#f9b43b;
     font-weight: normal;
     font-style: normal;
 }
-%section-header{
+.section-title{
     font-family: 'gagalin',sans-serif;
     font-size:72px;
-    // line-height: 85px;
     text-transform: uppercase; 
+    
 }
-%button{
+.btn{
     border-radius: 5px;
     // width: 120px;
     display: block;
@@ -79,7 +79,7 @@ $orange_head:#f9b43b;
     color:white;
     justify-content: space-between;
     align-items:center;
-    padding-top:20px;
+    padding-top:6px;
     .logo{
         background:url('icons/logo.svg') center center no-repeat ;
         width:100px;
@@ -95,7 +95,7 @@ $orange_head:#f9b43b;
             align-items: center;
             list-style: none;
             .menu__item{
-                margin-right: 20px;
+                margin-right: 16px;
                 display: flex;
                 align-items: center;
                 &:last-child{
@@ -124,13 +124,14 @@ $orange_head:#f9b43b;
         }
         .header__order-btn{
             background-color:$orange_button;
-            @extend %button;
             margin-left: 15px;
         }
     }
-    .btn{
-        @extend %button;
-    }
+    // .btn{
+    //     @extend %button;
+    // }
+
+
     // .navigation-list{
     //     display: flex;
     //     justify-content: around;
@@ -155,16 +156,22 @@ $orange_head:#f9b43b;
     // }
 }
 .welcome__content{
-    flex:.8;
+    //flex:.8;
     display: flex;
-    align-items: center;
-   
-
+   // align-items: center;
+    .welcome__content-image{
+       padding: 0 15px;
+    }
+    .welcome__content-text{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        padding-top:20px;
+    }
     .welcome__content-caption{
-        @extend %section-header;
         color:$orange_head;
-        margin-bottom: 45px;
-        line-height: 1;
+        // margin-bottom: 45px;
+        line-height: 2;
     }
     .welcome__content-desc{
         font-family: 'lifehack',sans-serif;
@@ -223,12 +230,12 @@ $orange_head:#f9b43b;
         position: fixed;
         z-index: 1000;
         top: 123px;
-        right: 82px;
+        right: 58px;
         list-style: none;
         display: flex;
         flex-direction: column;
         .change__item{
-            margin-bottom: 28px;
+            margin-bottom: 21px;
             .change__link{
                 position: relative;
                 &:after{
@@ -271,60 +278,106 @@ $orange_head:#f9b43b;
     // margin: 0 auto;
     display: block;
     position: absolute;
-    bottom:40px;
+    bottom:5%;
     transform: translate(-50%);
     left:50%;
 }
 
 .we-best{
-    background:url('best-background.png') center center no-repeat;
-    background-size: cover;
-    width:100%;
-    height: 100vh;
-    color:black;
+    background:url('best-background.png') center center / cover no-repeat;
+}
+.we-best__list{
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    padding: 0 95px;
-    .we-best__title{
-        color:black;
-        @extend %section-header;
-        padding-bottom: 100px;
-    }
-    .advantages{
-        display: flex;
-        list-style: none;
-        .advantages__item{
-            display: flex;
-            flex-direction: column;
-            width:33%;
-            justify-content: space-between;
-            text-align: center;
-            .advantages__img{
-                // transform: scale(1.4);
-                padding-bottom: 40px;
-            }
-            .advantages__caption{
-                font-family: 'lifehack', sans-serif;
-                font-size: 30px;
-              
-            }
-            .advantages__text{
-                font-family: 'Ubuntu', sans-serif;
-                font-weight: 300;
-                font-size: 17px;
-            }
-        }
+    list-style:none;
+    .we-best__item{
+       flex:1;
+       margin-right: 10px;
+       &:last-child{
+           margin-right: 0;
+       }
     }
 }
+.we-best-container{
+    justify-content: center;
+}
+.advantages{
+   
+    .advantages__img{
+        margin-bottom: 40px;
+        display: flex;
+        justify-content: center;
+        }
+        .advantages__desc{
+            text-align: center;
+        }
+        .advantages__caption{
+            font-family: 'lifehack', sans-serif;
+            font-size: 24px;
+            font-weight: 500; 
+            margin-bottom: 10px;
+        }
+        .advantages__text{
+            font-family: 'Ubuntu', sans-serif;
+            font-weight: 300;
+            font-size: 14px;
+            line-height: 1.5;
+        }
+}
+.we-best__title{
+    color:black;
+    padding-bottom: 100px;
+}
+.section-title--centered{
+    text-align: center;
+}
+
+// .we-best{
+//     background:url('best-background.png') center center no-repeat;
+//     background-size: cover;
+//     width:100%;
+//     height: 100vh;
+//     color:black;
+//     display: flex;
+//     flex-direction: column;
+//     align-items: center;
+//     justify-content: center;
+//     padding: 0 95px;
+//     .we-best__title{
+//         color:black;
+//         @extend %section-header;
+//         padding-bottom: 100px;
+//     }
+//     .advantages{
+//         display: flex;
+//         list-style: none;
+//         .advantages__item{
+//             display: flex;
+//             flex-direction: column;
+//             width:33%;
+//             justify-content: space-between;
+//             text-align: center;
+//             .advantages__img{
+//                 padding-bottom: 40px;
+//             }
+//             .advantages__caption{
+//                 font-family: 'lifehack', sans-serif;
+//                 font-size: 30px;
+              
+//             }
+//             .advantages__text{
+//                 font-family: 'Ubuntu', sans-serif;
+//                 font-weight: 300;
+//                 font-size: 17px;
+//             }
+//         }
+//     }
+// }
 .reviews{
     height: 100vh;
     background:grey;
     .reviews__list{
         display: flex;
         flex-wrap: wrap;
-        // @each $pos in (1,2,3,4,5,6,7,8) {
             .reviews__item{
                 list-style: none;
                 width:25%;
@@ -333,8 +386,6 @@ $orange_head:#f9b43b;
                     filter: grayscale(1);
                     width: 100%;
                     height: 100%;
-                    // background-size: cover;
-                    // background-position: 50%;
                     .reviews__content{
                         filter: grayscale(0);
                         background-color:rgba(0,0,0,0.5);
@@ -353,25 +404,24 @@ $orange_head:#f9b43b;
                         .reviews__text{
                             font-family:'Ubuntu',sans-serif;
                             font-weight: lighter;
-                            font-size: 17px;
+                            font-size: 14px;
                             line-height: 24px;
                             padding-bottom: 30px;
                         }
                         .reviews__name{
                             font-family:'Gagalin',sans-serif;
                             text-transform: uppercase;
-                            font-size: 17px;
+                            font-size: 14px;
                             padding-bottom: 30px;
                         }
                         .reviews__more-link{
-                          @extend %button;
+                        //   @extend %button;
                           background-color: #2f3234;
-                          width: 130px;
+                          width: 110px;
                         }
                     }
                 }
             }
-        // }
     }
 }
 
