--- a/style.scss
+++ b/style.scss
@@ -1,446 +1,56 @@
-$orange_button:#e45028;
-$orange_head:#f9b43b;
-@font-face {
-    font-family: 'lifehack';
-    src:local(Lifehack), 
-    url('fonts/lifehack/lifehack_medium-webfont.woff2') format('woff2');
-    font-weight: normal;
-    font-style: normal;
-}
-@font-face {
-    font-family: 'gagalin';
-    src:local(gagalin), 
-    url('fonts/Gagalin/gagalin-regular-webfont.woff2') format('woff2');
-    font-weight: normal;
-    font-style: normal;
-}
-.section-title{
-    font-family: 'gagalin',sans-serif;
-    font-size:72px;
-    text-transform: uppercase; 
-    
-}
-.btn{
-    border-radius: 5px;
-    // width: 120px;
-    display: block;
-    padding: 10px 15px;
-    // height: 44px;
-    text-align: center;
-    // line-height: 44px;
-    text-transform: uppercase;
-    text-decoration: none;
-    font-size: 13px;
-    font-weight:500;
-    color:white
-}
-*{
-    box-sizing: border-box;
-    margin: 0;
-    padding:0;
-    font-family: 'Ubuntu', sans-serif;
-  
-}
-// @font-face {
-//     font-family: 'Lifehack';
-//     src: url('fonts/lifehack/lifehack_medium-webfont.woff2') format('woff2'),
-//          url('lifehack_medium-webfont.woff') format('woff');
-//     font-weight: normal;
-//     font-style: normal;
-// headet footer map slider fixednav 
-// }
-
-.section{
-    height: 100vh;
-    min-height: 650px;
-}
-.welcome{
-    background:url('welcome-background.png') center center no-repeat;
-    background-size: cover;
-    width:100%;
-    height: 100vh;
-    display: flex;
-    color:white;
-    position: relative;
-}
-.container{
-    // width:1100px;
-    // margin: 0 auto;
-    width: 1100px;
-    padding: 0 80px;
-    margin: 0 auto;
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-}
-
-.header{
-    display: flex;
-    color:white;
-    justify-content: space-between;
-    align-items:center;
-    padding-top:6px;
-    .logo{
-        background:url('icons/logo.svg') center center no-repeat ;
-        width:100px;
-        height:80px;
-        transform: scale(1.1);
-    }
-    .header__buttons{
-        display: flex;
-        justify-content: flex-end;
-        align-items: center;
-        .menu__list{
-            display: flex;
-            align-items: center;
-            list-style: none;
-            .menu__item{
-                margin-right: 16px;
-                display: flex;
-                align-items: center;
-                &:last-child{
-                    margin-right: 0;
-                    &:after{
-                        display: none;
-                    }
-                }
-                &:after{
-                    content:'';
-                    width: 4px;
-                    height: 4px;
-                    background: #fff;
-                    border-radius: 50%;
-                    margin-left: 15px;
-
-                }
-
-                .menu__link{
-                    font-size: 13px;
-                    color:white;
-                    text-transform: uppercase;
-                    text-decoration: none;
-                }
-            }
-        }
-        .header__order-btn{
-            background-color:$orange_button;
-            margin-left: 15px;
-        }
-    }
-    // .btn{
-    //     @extend %button;
-    // }
+@import "fonts.scss";
+@import "layout.scss";
+@import "variables.scss";
 
 
-    // .navigation-list{
-    //     display: flex;
-    //     justify-content: around;
-    //     background: green;
-    //     /* width: 884px; */
-    //     margin-left: 59px;
-    //     justify-content: space-around;
-    //     .navigation__item{
-    //         color: #ffffff;
-    //         font-family: 'Ubuntu';
-    //         font-size: 18px;
-    //         font-weight: 500;
-    //         text-transform: uppercase;
-    //         margin-right: 45px;
-    //         &:last-child{
-    //             margin-right: 0;
-    //         }
-    //         &:first-child{
-    //             list-style: none;
-    //         }
-    //     }
-    // }
-}
-.welcome__content{
-    //flex:.8;
-    display: flex;
-   // align-items: center;
-    .welcome__content-image{
-       padding: 0 15px;
-    }
-    .welcome__content-text{
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        padding-top:20px;
-    }
-    .welcome__content-caption{
-        color:$orange_head;
-        // margin-bottom: 45px;
-        line-height: 2;
-    }
-    .welcome__content-desc{
-        font-family: 'lifehack',sans-serif;
-            font-size:65px;
-            line-height: 1;
-            text-transform: lowercase; 
-           // background: #000;
-    }
-}
-// .welcome__content{
-//     background:pink;    
-//     display: flex;
-//     .welcome__content-image{
-//         transform: scale(0.84);
-//         background:black;
-//         &:before{
-//             content: "";
-//             width: 600px;
-//             height: 500px;
-//             background-image: url("file:///Users/tweecezor/Documents/GitHub/Loft-Burger/icons/drops.svg");
-//            background-repeat: no-repeat;
-//             position: absolute;
-//             top: 247px;
-//             left: 102px;
-//             z-index: -1;
-//             transform: scale(1.45);
-//         }
-//     }
-//     .welcome__content-text{
-//         background: brown;
-//         display: flex;
-//         flex-direction: column;
-//         justify-content: center;
-//         .welcome-content__desc{
-//             font-family: 'lifehack',sans-serif;
-//             font-size:75px;
-//             line-height: 60px;
-//             text-transform: lowercase; 
-//             background: #000;
-//         }
-//         .welcome-content__caption{
-//             @extend %section-header;
-//             color:$orange_head; 
-//             background: red;
-//         }
-//     }
-    
-   
-// }
+@import "welcome.scss";
+@import "reviews.scss";
+@import "we-best.scss";
+@import "fixed-menu.scss";
+@import "header.scss";
+@import "btn.scss";
+@import "section-title.scss";
 
 
 
-// .section-change{   
-  
-    .change__list{
-        position: fixed;
-        z-index: 1000;
-        top: 123px;
-        right: 58px;
-        list-style: none;
-        display: flex;
-        flex-direction: column;
-        .change__item{
-            margin-bottom: 21px;
-            .change__link{
-                position: relative;
-                &:after{
-                    content:'';
-                    width:6px;
-                    height: 6px;
-                    background: white;
-                    border-radius: 50%;
-                    position: absolute;
-                    top:50%;
-                    left:50%;
-                    transform: translate(-50%,-50%);
-                }
-                &:hover{
-                    &:before{
-                        content:'';
-                        width:17px;
-                        height: 17px;
-                        border:2px solid white;
-                        border-radius: 50%;
-                        position: absolute;
-                        // left:-7px;
-                        // top:-6px;
-                        top:50%;
-                        left:50%;
-                        transform: translate(-50%,-50%);
-                        transition: 0.4s;
-                    }
-                }
-            }
-        }
-        
-    }
-// }
 
-.scroll-down-arrow{
-    background:url('icons/arrow-scroll.svg') center center no-repeat;
-    width:50px;
-    height: 50px;
-    // margin: 0 auto;
-    display: block;
-    position: absolute;
-    bottom:5%;
-    transform: translate(-50%);
-    left:50%;
-}
 
-.we-best{
-    background:url('best-background.png') center center / cover no-repeat;
-}
-.we-best__list{
-    display: flex;
-    list-style:none;
-    .we-best__item{
-       flex:1;
-       margin-right: 10px;
-       &:last-child{
-           margin-right: 0;
-       }
-    }
-}
-.we-best-container{
-    justify-content: center;
-}
-.advantages{
-   
-    .advantages__img{
-        margin-bottom: 40px;
-        display: flex;
-        justify-content: center;
-        }
-        .advantages__desc{
-            text-align: center;
-        }
-        .advantages__caption{
-            font-family: 'lifehack', sans-serif;
-            font-size: 24px;
-            font-weight: 500; 
-            margin-bottom: 10px;
-        }
-        .advantages__text{
-            font-family: 'Ubuntu', sans-serif;
-            font-weight: 300;
-            font-size: 14px;
-            line-height: 1.5;
-        }
-}
-.we-best__title{
-    color:black;
-    padding-bottom: 100px;
-}
-.section-title--centered{
-    text-align: center;
-}
 
-// .we-best{
-//     background:url('best-background.png') center center no-repeat;
-//     background-size: cover;
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+// .burger-slider{
 //     width:100%;
 //     height: 100vh;
-//     color:black;
-//     display: flex;
-//     flex-direction: column;
-//     align-items: center;
-//     justify-content: center;
-//     padding: 0 95px;
-//     .we-best__title{
-//         color:black;
-//         @extend %section-header;
-//         padding-bottom: 100px;
-//     }
-//     .advantages{
-//         display: flex;
-//         list-style: none;
-//         .advantages__item{
-//             display: flex;
-//             flex-direction: column;
-//             width:33%;
-//             justify-content: space-between;
-//             text-align: center;
-//             .advantages__img{
-//                 padding-bottom: 40px;
-//             }
-//             .advantages__caption{
-//                 font-family: 'lifehack', sans-serif;
-//                 font-size: 30px;
-              
-//             }
-//             .advantages__text{
-//                 font-family: 'Ubuntu', sans-serif;
-//                 font-weight: 300;
-//                 font-size: 17px;
-//             }
-//         }
-//     }
-// }
-.reviews{
-    height: 100vh;
-    background:grey;
-    .reviews__list{
-        display: flex;
-        flex-wrap: wrap;
-            .reviews__item{
-                list-style: none;
-                width:25%;
-                height: 50vh;
-                .reviews__avatar{
-                    filter: grayscale(1);
-                    width: 100%;
-                    height: 100%;
-                    .reviews__content{
-                        filter: grayscale(0);
-                        background-color:rgba(0,0,0,0.5);
-                        display: flex;
-                        flex-direction: column;
-                        padding-left:30px;
-                        padding-right:50px;
-                         opacity: 0;
-                        width: 100%;
-                        height: 100%;
-                        justify-content: center;
-                        color:white;
-                        &:hover{
-                            opacity: 1;
-                        }
-                        .reviews__text{
-                            font-family:'Ubuntu',sans-serif;
-                            font-weight: lighter;
-                            font-size: 14px;
-                            line-height: 24px;
-                            padding-bottom: 30px;
-                        }
-                        .reviews__name{
-                            font-family:'Gagalin',sans-serif;
-                            text-transform: uppercase;
-                            font-size: 14px;
-                            padding-bottom: 30px;
-                        }
-                        .reviews__more-link{
-                        //   @extend %button;
-                          background-color: #2f3234;
-                          width: 110px;
-                        }
-                    }
-                }
-            }
-    }
-}
-
-.burger-slider{
-    width:100%;
-    height: 100vh;
-    background: orange;
-    color:red;
-    text-align: center;
+//     background: orange;
+//     color:red;
+//     text-align: center;
   
 
-}
-.team{
-    width:100%;
-    height: 100vh;
-    background: pink;
-    color:red;
-    text-align: center;
-}
+// }
+// .team{
+//     width:100%;
+//     height: 100vh;
+//     background: pink;
+//     color:red;
+//     text-align: center;
+// }
 // .menu{
 //     width:100%;
 //     height: 100vh;
@@ -466,24 +76,24 @@ $orange_head:#f9b43b;
 //         flex:1;
 //     }
 // }
-.our-work{
-    width:100%;
-    height: 100vh;
-    background: lightcoral;
-    color:red;
-    text-align: center;
-}
-.delivery{
-    width:100%;
-    height: 100vh;
-    background: lightseagreen;
-    color:red;
-    text-align: center;
-}
-.map{
-    width:100%;
-    height: 100vh;
-    background: lightskyblue;
-    color:red;
-    text-align: center;
-}
+// .our-work{
+//     width:100%;
+//     height: 100vh;
+//     background: lightcoral;
+//     color:red;
+//     text-align: center;
+// }
+// .delivery{
+//     width:100%;
+//     height: 100vh;
+//     background: lightseagreen;
+//     color:red;
+//     text-align: center;
+// }
+// .map{
+//     width:100%;
+//     height: 100vh;
+//     background: lightskyblue;
+//     color:red;
+//     text-align: center;
+// }
